# Projektil-Control-Public

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  SUPPORT.md  config.json  package-lock.json  package.json  setup-and-build.bat  update_and_run.sh
frontend/: index.html
frontend/js/: tauri-bridge.js
pixera-modules/: ProjektilControl.json  ProjektilControl.lua
release-notes/: v1.0.4-beta-private.md  v1.0.4-beta-public.md
scripts/: bump-version.js
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  oca.rs
