[package]
name = "projektil-control"
version = "1.0.5-beta"
description = "PROJEKTIL Show Control"
authors = ["WE ARE PROJEKTIL AG"]
edition = "2021"

[lib]
name = "projektil_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "projektil-control"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
base64 = "0.22"
md5 = "0.7"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
